--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>2.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
