--- a/ddd-bank-domain/pom.xml
+++ b/ddd-bank-domain/pom.xml
@@ -46,5 +46,12 @@
 
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.8.5</version>
+        </dependency>
+    </dependencies>
 
 </project>
